tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__KillAlltheThings-AAAAAAAAAAAAAAAAAAAAJQ==__SlimeEvolved-AAAAAAAAAAAAAAAAAAADmw==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 923,
  "prerequisites": [
    922
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Totally looks like a thaumic slime to me. Don't you think so? Find this dude on Proteus.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": true,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Slime: Evolved",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": 1728000,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    922
  ],
  "rewards": [],
  "tasks": []
}
