tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__KillAlltheThings-AAAAAAAAAAAAAAAAAAAAJQ==__TimetoKillBighor-AAAAAAAAAAAAAAAAAAALEA==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 2832,
  "prerequisites": [
    225
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Oh no, not the poor bighorn sheep! Fluffy and red, I'm so sad in the Twilight Forest.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Time to Kill (Bighorn Sheep)",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": 432000,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    225
  ],
  "rewards": [],
  "tasks": []
}
